Explicitly use kramdown for Markdown since Maraku is going away

--- a/_config.yml
+++ b/_config.yml
@@ -2,3 +2,4 @@ exclude: [README.md, CNAME, bootstrap]
 permalink: /blog/:year/:month/:day/:title
 paginate: 10
 paginate_path: /blog/page:num
+markdown: kramdown
