--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "bootstrap"]
 	path = bootstrap
-	url = git://github.com/prog694/bootstrap.git
+	url = https://github.com/prog694/bootstrap.git
