--- a/_data/ec.yml
+++ b/_data/ec.yml
@@ -42,6 +42,7 @@ strategy:
     photo: /img/ec/chris.jpg
 ados:
     name: Max Su
+    photo: /img/ec/max.jpg
 design:
     name: Paul Li
     photo: /img/ec/paul.jpg
