Update VPoSE. Closes #79

--- a/_data/ec.yml
+++ b/_data/ec.yml
@@ -17,8 +17,8 @@ vpom:
     name: Yubin Kim
     photo: /img/ec/yubin.jpg
 vpse:
-    name: Ishraq Bhuiyan
-    photo: /img/ec/ishraq.jpg
+    name: Vacant
+    photo: 
 lab-ops:
     name: Leith Conybeare
     photo: /img/ec/leith.jpg
