Add ethan to ec page

--- a/_data/ec.yml
+++ b/_data/ec.yml
@@ -17,7 +17,7 @@ vpom:
     name: Yubin Kim
     photo: /img/ec/yubin.jpg
 vpse:
-    name: Vacant
+    name: Ethan Cheng
     photo: 
 lab-ops:
     name: Leith Conybeare
