Add solidworks to sponsor page

--- a/_data/sponsors/sponsors.yml
+++ b/_data/sponsors/sponsors.yml
@@ -28,6 +28,9 @@
 - name: Bloomberg
   logo: /img/sponsors/bloomberg.gif
   site: http://www.bloomberg.com/
+- name: Solidworks
+  logo: /img/sponsors/solidworks.gif
+  site: http://www.solidworks.com/
 - name: W.Y.N.
 - name: Joe Ricci
 - name: Evan Greene
