Add Ethan's photo to EC page.

--- a/_data/ec.yml
+++ b/_data/ec.yml
@@ -18,7 +18,7 @@ vpom:
     photo: /img/ec/yubin.jpg
 vpse:
     name: Ethan Cheng
-    photo: 
+    photo: /img/ec/ethan.jpg 
 lab-ops:
     name: Leith Conybeare
     photo: /img/ec/leith.jpg
