Add post on kickoff

--- a/_data/sponsors/sponsors.yml
+++ b/_data/sponsors/sponsors.yml
@@ -29,7 +29,7 @@
   logo: /img/sponsors/bloomberg.gif
   site: http://www.bloomberg.com/
 - name: Solidworks
-  logo: /img/sponsors/solidworks.gif
+  logo: /img/sponsors/solidworks.png
   site: http://www.solidworks.com/
 - name: W.Y.N.
 - name: Joe Ricci
