--- a/_data/carousel.yml
+++ b/_data/carousel.yml
@@ -9,9 +9,9 @@
 - img: /img/carousel/not-electronics-plate.jpg
   caption-header: One of our many dubious labels
   caption-body: DESmond's electronics board
-- img: /img/carousel/splash-2013.jpg
-  caption-header: Ameya leads Stuy Splash
-  caption-body: Our President of Engineering opening the 2013 session
+- img: /img/carousel/zhang-splash2014.png
+  caption-header: Stuy Splash 2014
+  caption-body: Principal Zhang meets with keynote speaker, Dr. Jizhong Xiao
 - img: /img/carousel/nyc-regional-winners.jpg
   caption-header: Winners of the New York City Regional
   caption-body: StuyPulse wins the New York City Regional for the first time since 2010.
