--- a/_data/carousel.yml
+++ b/_data/carousel.yml
@@ -1,17 +1,11 @@
 # Carousel items on front page
 # Limit to 5 carousel items
-- img: /img/carousel/sawing.jpg
-  caption-header: Heads-down building!
-  caption-body: 2014 Build Season - Week 5
-- img: /img/carousel/milling.jpg
-  caption-header: Hard at work at the mill
-  caption-body: 2014 Build Season - Week 4
-- img: /img/carousel/not-electronics-plate.jpg
-  caption-header: One of our many dubious labels
-  caption-body: DESmond's electronics board
-- img: /img/carousel/zhang-splash2014.png
+- img: /img/carousel/build-season-2015.jpg
+  caption-header: Working hard on prototypes
+  caption-body: 2015 Build Season - Week 1
+- img: /img/carousel/keynote-splash-2014.jpg
+  caption-header: Stuy Splash 2014
+  caption-body: Dr. Jizhong Xiao gives a talk on robotics
+- img: /img/carousel/zhang-splash-2014.png
   caption-header: Stuy Splash 2014
   caption-body: Principal Zhang meets with keynote speaker, Dr. Jizhong Xiao
-- img: /img/carousel/nyc-regional-winners.jpg
-  caption-header: Winners of the New York City Regional
-  caption-body: StuyPulse wins the New York City Regional for the first time since 2010.
