Fix capitalization in carousel

--- a/_data/carousel.yml
+++ b/_data/carousel.yml
@@ -7,7 +7,7 @@
   caption-header: Working hard on prototypes
   caption-body: 2015 Build Season - Week 1
 - img: /img/carousel/alex-kickoff.jpg
-  caption-header: Alex Carrillo represents Stuypulse on the big screen
+  caption-header: Alex Carrillo represents StuyPulse on the big screen
   caption-body: FRC Kickoff 2015 - Recycle Rush
 - img: /img/carousel/keynote-splash-2014.jpg
   caption-header: Dr. Jizhong Xiao gives a talk on robotics
