Convert pngs to jpgs

--- a/_data/carousel.yml
+++ b/_data/carousel.yml
@@ -1,6 +1,6 @@
 # Carousel items on front page
 # Limit to 5 carousel items
-- img: /img/carousel/bathook.png
+- img: /img/carousel/bathook.jpg
   caption-header: The hook we need, but not the one we deserve.  
   caption-body: Peg-asus 1's Bathook
 - img: /img/carousel/prototyping-2.jpg
