--- a/_data/sponsors/sponsors.yml
+++ b/_data/sponsors/sponsors.yml
@@ -22,7 +22,7 @@
   site: http://stuy-pa.org/home/
 - name: SHS Class of 1961
 - name: Ann &amp; Donovan Moore
-  site: http://www.timeinc.com/aboutus/executives/moore.php
+  site: http://www.wallacefoundation.org/learn-about-wallace/people/Pages/Ann-S-Moore.aspx
 - name: Abby &amp; Tom Ferguson
   site: http://www.coxandco.com/management/tom-ferguson.html
 - name: Bloomberg
