--- a/_data/carousel.yml
+++ b/_data/carousel.yml
@@ -1,5 +1,5 @@
 # Carousel items on front page
-# Limit to 5 carousel items
+# There must be exactly 5 items
 - img: /img/carousel/bathook.jpg
   caption-header: The hook we need, but not the one we deserve.  
   caption-body: Peg-asus 1's Bathook
