Fix robot name on carousel

--- a/_data/carousel.yml
+++ b/_data/carousel.yml
@@ -2,7 +2,7 @@
 # There must be exactly 5 items
 - img: /img/carousel/bathook.jpg
   caption-header: The hook we need, but not the one we deserve.  
-  caption-body: Peg-asus 1's Bathook
+  caption-body: PEGasus 1's Bathook
 - img: /img/carousel/prototyping-2.jpg
   caption-header: Working hard on prototypes
   caption-body: 2015 Build Season - Week 1
