--- a/_data/ec.yml
+++ b/_data/ec.yml
@@ -2,53 +2,39 @@
 # Used by: /about/ec
 # For each position, name is required and photo is optional.
 poe:
-    name: Noah Tom-Wong
-    photo: /img/ec/noah.jpg
-pom:
-    name: Vacant
-pse:
-    name: Justin Kim
-    photo: /img/ec/justin.jpg
-vpoe:
     name: Jion Fairchild
-    photo: /img/ec/jion.jpg
-vpom:
+pom:
     name: Yubin Kim
-    photo: /img/ec/yubin.jpg
-vpse:
+pse:
     name: Ethan Cheng
-    photo: /img/ec/ethan.jpg 
+vpoe:
+    name: Jonah Sachs-Wetstone
+vpom:
+    name: Courtney Chiu
+vpse:
+    name: Nicole Shin 
 lab-ops:
-    name: Leith Conybeare
-    photo: /img/ec/leith.jpg
+    name: Dana Yang
 finance:
-    name: Vacant
-pr:
     name: Sally Ko
-    photo: /img/ec/sally.jpg
-ops:
-    name: YeJu (Lucy) Lee
+pr:
+    name: Vacant
+procurement:
+    name: Daniel Chain
 electronics:
+    name: Anthony Zeng
+adoe:
     name: Vacant
 field:
-    name: Shantanu Jha
-    photo: /img/ec/shantanu.jpg
+    name: Arpita Abrol
 strategy:
     name: Christopher Sherling
     photo: /img/ec/chris.jpg
 ados:
-    name: Max Su
-    photo: /img/ec/max.jpg
+    name: Leith Conybeare
 design:
-    name: Paul Li
-    photo: /img/ec/paul.jpg
-safety:
-    name: Levi Olevsky
+    name: Shantanu Jha
 machinist:
     name: Anya Keller
 animation:
-    name: Wenhao Du
-    photo: /img/ec/wenhao.jpg
-webmaster:
-    name: Ivy Wong
-    photo: /img/ec/ivy.jpg
+    name: Franklin Wang
