Ignore or replace links conflicting with html-proofer

--- a/_data/sponsors/special-thanks.yml
+++ b/_data/sponsors/special-thanks.yml
@@ -9,7 +9,7 @@
   site: http://www.controlgroup.com/
 - name: Funny Garbage
   logo: /img/sponsors/funnygarbage.gif
-  site: http://www.funnygarbage.com/
+  site: https://twitter.com/funnygarbage
 - name: The Roberts Group
   logo: /img/sponsors/robertsgroup.gif
   site: http://www.trgrp.com/
