Add food sponsors to specials thanks section of sponsors

--- a/_data/sponsors/special-thanks.yml
+++ b/_data/sponsors/special-thanks.yml
@@ -13,3 +13,12 @@
 - name: The Roberts Group
   logo: /img/sponsors/robertsgroup.gif
   site: http://www.trgrp.com/
+- name: Whole Foods
+  logo: /img/sponsors/wholefoods.gif
+  site: http://www.wholefoodsmarket.com/
+- name: Sprinkles Cupcakes
+  logo: /img/sponsors/sprinkles.gif
+  site: http://www.sprinkles.com/
+- name: Billy"'"s Backery
+  logo: /img/sponsors/billys.gif
+  site: http://www.billysbakerynyc.com/
