--- a/_data/sponsors/sponsors.yml
+++ b/_data/sponsors/sponsors.yml
@@ -34,6 +34,11 @@
 - name: CSC
   logo: /img/sponsors/csc.png
   site: http://www.csc.com/
+- name: Think Shirt
+  logo: /img/sponsors/thinkshirt.png
+  site: http://www.ThinkShirt.com
 - name: W.Y.N.
 - name: Joe Ricci
 - name: Evan Greene
+- name: Yvonne and Roland Conybeare
+- name: Justin Kim
