Change some sponsor images to .png

--- a/_data/sponsors/special-thanks.yml
+++ b/_data/sponsors/special-thanks.yml
@@ -14,10 +14,10 @@
   logo: /img/sponsors/robertsgroup.gif
   site: http://www.trgrp.com/
 - name: Whole Foods
-  logo: /img/sponsors/wholefoods.gif
+  logo: /img/sponsors/wholefoods.png
   site: http://www.wholefoodsmarket.com/
 - name: Sprinkles Cupcakes
-  logo: /img/sponsors/sprinkles.gif
+  logo: /img/sponsors/sprinkles.png
   site: http://www.sprinkles.com/
 - name: Billy"'"s Backery
   logo: /img/sponsors/billys.gif
