Fix billy's backery logo

--- a/_data/sponsors/special-thanks.yml
+++ b/_data/sponsors/special-thanks.yml
@@ -19,6 +19,6 @@
 - name: Sprinkles Cupcakes
   logo: /img/sponsors/sprinkles.png
   site: http://www.sprinkles.com/
-- name: Billy"'"s Backery
+- name: Billy's Backery
   logo: /img/sponsors/billys.png
   site: http://www.billysbakerynyc.com/
