--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ env:
   global:
   - NOKOGIRI_USE_SYSTEM_LIBRARIES=true
 script:
-- bundle exec jekyll build && bundle exec htmlproofer --check-html --assume-extension ./_site
+- bundle exec jekyll build && bundle exec htmlproofer --check-html --assume-extension --url-ignore "/#.*/" ./_site
 - "./_scripts/check-carousel-size.rb"
 - "./_scripts/check-stuypulse-capitalization.sh"
 - "./_scripts/check-image-extensions.sh"
