--- a/_data/sponsors/sponsors.yml
+++ b/_data/sponsors/sponsors.yml
@@ -1,6 +1,7 @@
 # Sponsors
 # Used by: /sponsors, front page
 # For each sponsor, name is required and logo/site are optional.
+# Whenever updating this file, consult the style guide: https://github.com/Team694/team694.github.io/wiki/Style-Guide
 - name: D.E. Shaw &amp; Co.
   logo: /img/sponsors/deshaw.gif
   site: http://www.deshaw.com/
