Add AgileBits as a sponsor

--- a/_data/sponsors/sponsors.yml
+++ b/_data/sponsors/sponsors.yml
@@ -36,6 +36,9 @@
 - name: Think Shirt
   logo: /img/sponsors/thinkshirt.png
   site: http://www.ThinkShirt.com
+- name: AgileBits
+  logo: /img/sponsors/agilebits.png
+  site: https://agilebits.com/
 - name: W.Y.N.
 - name: Joe Ricci
 - name: Evan Greene
