Add AgileBits to the Special Thanks section

--- a/_data/sponsors/special-thanks.yml
+++ b/_data/sponsors/special-thanks.yml
@@ -19,6 +19,9 @@
 - name: Sprinkles Cupcakes
   logo: /img/sponsors/sprinkles.png
   site: http://www.sprinkles.com/
-- name: Billy's Backery
+- name: Billy's Bakery
   logo: /img/sponsors/billys.png
   site: http://www.billysbakerynyc.com/
+- name: AgileBits
+  logo: /img/sponsors/agilebits.png
+  site: https://agilebits.com/
