Add new sponsors

--- a/_data/sponsors/sponsors.yml
+++ b/_data/sponsors/sponsors.yml
@@ -35,3 +35,6 @@
 - name: Yvonne and Roland Conybeare
 - name: Justin Kim
 - name: Rehab One Physical Therapy PC
+- name: Investor's Bank
+- name: Leung Family
+- name: Rocha Family
