--- a/_data/carousel.yml
+++ b/_data/carousel.yml
@@ -1,12 +1,12 @@
 # Carousel items on front page
 # There must be exactly 5 items
-- img: /img/carousel/SoFlo-Regional-2016.jpg
-  caption-header: DEStiny in action during the South Florida Regional
-- img: /img/carousel/DEStiny-CAD.png
-  caption-header: Our CAD Design of DEStiny
-- img: /img/carousel/working-on-destiny.png
-  caption-header: Engineers hard at work with building the robot during build season
-- img: /img/carousel/machining.png
-  caption-header: Engineers working with the mill during build season
-- img: /img/carousel/DEStiny-in-the-pit.jpg
-  caption-header: Members and mentors hard at work during NYC Regional
+- img: /img/carousel/rafael.jpg
+  caption-header: This year's robot, Rafael
+- img: /img/carousel/rafael-cad.jpg
+  caption-header: Our CAD design of Rafael
+- img: /img/carousel/team-photo-2017.jpg
+  caption-header: Team photo with Rafael and one of our coaches, Rafael Colón
+- img: /img/carousel/working-on-rafael.jpg
+  caption-header: Engineers working hard on fixing the robot before bag and tag
+- img: /img/carousel/rafael-climbing.png
+  caption-header: Rafael climbing the rope
