Add new sponsors

--- a/_data/sponsors/special-thanks.yml
+++ b/_data/sponsors/special-thanks.yml
@@ -25,3 +25,6 @@
 - name: AgileBits
   logo: /img/sponsors/agilebits.png
   site: https://agilebits.com/
+- name: UltraPress
+  logo: /img/sponsors/ultrapress.png
+  site: https://ultrapress.com/
