--- a/_data/sponsors/sponsors.yml
+++ b/_data/sponsors/sponsors.yml
@@ -30,3 +30,6 @@
 - name: Investor's Bank
 - name: Leung Family
 - name: Rocha Family
+- name: UKD Foundation
+  logo: /img/sponsors/ukdfoundation.png
+  site: http://www.ukdcure.org/
