Update carousel images

--- a/_data/carousel.yml
+++ b/_data/carousel.yml
@@ -2,11 +2,11 @@
 # There must be exactly 5 items
 - img: /img/carousel/rafael.jpg
   caption-header: This year's robot, Rafael
-- img: /img/carousel/rafael-cad.jpg
-  caption-header: Our CAD design of Rafael
-- img: /img/carousel/team-photo-2017.jpg
-  caption-header: Team photo with Rafael and one of our coaches, Rafael Colón
-- img: /img/carousel/working-on-rafael.jpg
-  caption-header: Engineers working hard on fixing the robot before bag and tag
-- img: /img/carousel/rafael-climbing.png
-  caption-header: Rafael climbing the rope
+- img: /img/carousel/worlds-2017.jpg
+  caption-header: StuyPulse at the St. Louis World Championship!
+- img: /img/carousel/dancing-nyc-regional.jpg
+  caption-header: Team Members dancing with Team 6354 at the NYC Regional!
+- img: /img/carousel/rafael-climbing.jpg
+  caption-header: Rafael climbing at the South Florida Regional!
+- img: /img/carousel/694-6354-4613.jpg
+  caption-header: StuyPulse with Team 6354 and Team 4613!
