Update carousel image

--- a/_data/carousel.yml
+++ b/_data/carousel.yml
@@ -8,5 +8,5 @@
   caption-header: Team Members dancing with Team 6354 at the NYC Regional!
 - img: /img/carousel/rafael-climbing.jpg
   caption-header: Rafael climbing at the South Florida Regional!
-- img: /img/carousel/694-6354-4613.jpg
-  caption-header: StuyPulse with Team 6354 and Team 4613!
+- img: /img/carousel/crc-2017.jpg
+  caption-header: StuyPulse with team 9070 at the China Robotics Challenge!
