--- a/_data/ec.yml
+++ b/_data/ec.yml
@@ -31,6 +31,7 @@ procurement:
     name: Coby S.
 electronics:
     name: Brian L.
+    photo: /img/ec/brian_leung.jpg
 adoe:
     name: Colin H.
 field:
