Update Carousel with NYC Photos.

--- a/_data/carousel.yml
+++ b/_data/carousel.yml
@@ -6,7 +6,7 @@
   caption-header: StuyPulse with Wildcard on Stop Build Day.
 - img: /img/carousel/mentors-2018.png
   caption-header: Mentors and alumni who have helped us!
-- img: /img/carousel/crc-2017.jpg
-  caption-header: StuyPulse with team 9070 at the China Robotics Challenge!
-- img: /img/carousel/dancing-nyc-regional.jpg
-  caption-header: Team Members dancing with Team 6354 at the 2017 NYC Regional!
+- img: /img/carousel/true-blue.jpg
+  caption-header: Team StuyPulse celebrating True Blue at NYC 2018!
+- img: /img/carousel/2018-chairmans-team.jpg
+  caption-header: 2018 Chairman's Team at NYC!
