Fix most html-proofer errors
The remaining errors are due to svn.stuypulse.com being down.

--- a/_data/sponsors/sponsors.yml
+++ b/_data/sponsors/sponsors.yml
@@ -14,10 +14,9 @@
   logo: /img/sponsors/shsaa.gif
   site: http://www.shsaa.org/
 - name: SHS Parents' Association
-  site: http://stuy-pa.org/home/
+  site: https://stuy-pa.org/
 - name: Ann &amp; Donovan Moore
 - name: Abby &amp; Tom Ferguson
-  site: http://www.coxandco.com/management/tom-ferguson.html
 - name: Bloomberg
   logo: /img/sponsors/bloomberg.gif
   site: http://www.bloomberg.com/
