Fix old robot code repositories and convert images to jpg (#141)
* Convert carousel png images to jpg and edit carousels.yml
* Fix external links with correct github address
* Remove png files

--- a/_data/carousel.yml
+++ b/_data/carousel.yml
@@ -6,7 +6,7 @@
   caption-header: StuyPulse with all 3 robots at Hudson Valley Regional!
 - img: /img/carousel/china-2018.jpg
   caption-header: StuyPulse at China's Robotics Competition in Hangzhou, China!
-- img: /img/carousel/wildcard.png
+- img: /img/carousel/wildcard.jpg
   caption-header: This year's robot, Wildcard!
-- img: /img/carousel/group-2018.png
+- img: /img/carousel/group-2018.jpg
   caption-header: StuyPulse with Wildcard on Stop Build Day.
