--- a/_data/sponsors/sponsors.yml
+++ b/_data/sponsors/sponsors.yml
@@ -25,8 +25,10 @@
   site: http://www.solidworks.com/
 - name: RiskEcon Lab for Decision Metrics
   logo: https://stuypulse.nyc3.cdn.digitaloceanspaces.com/site/sponsorships/img/RiskEcon.png
+  site: https://wp.nyu.edu/riskeconlab/
 - name: Numerati
   logo: https://stuypulse.nyc3.cdn.digitaloceanspaces.com/site/sponsorships/img/Numerati.png
+  site: http://numeratipartners2012.com/
 - name: Joe Ricci
 - name: Justin Kim
 - name: Rehab One Physical Therapy PC
