--- a/_data/carousel.yml
+++ b/_data/carousel.yml
@@ -1,12 +1,12 @@
 # Carousel items on front page
 # There must be exactly 5 items
-- img: /img/carousel/IRI.jpg
-  caption-header: StuyPulse at Indiana Robotics Invitational!
-- img: /img/carousel/HVR.jpg
-  caption-header: StuyPulse with all 3 robots at Hudson Valley Regional!
-- img: /img/carousel/china-2018.jpg
-  caption-header: StuyPulse at China's Robotics Competition in Hangzhou, China!
-- img: /img/carousel/wildcard.jpg
-  caption-header: This year's robot, Wildcard!
-- img: /img/carousel/group-2018.jpg
-  caption-header: StuyPulse with Wildcard on Stop Build Day.
+- img: https://stuypulse.nyc3.digitaloceanspaces.com/site/img/strat-2019.jpg
+  caption-header: StuyPulse's strategy team at the Central New York Regional!
+- img: https://stuypulse.nyc3.digitaloceanspaces.com/site/img/cny-2019.jpg
+  caption-header: StuyPulse at the Central New York Regional!
+- img: https://stuypulse.nyc3.digitaloceanspaces.com/site/img/tvr-2019.jpg
+  caption-header: StuyPulse at the New York Tech Valley Regional!
+- img: https://stuypulse.nyc3.digitaloceanspaces.com/site/img/Alfred.jpg
+  caption-header: Our 2019 season robot, Alfred!
+- img: https://stuypulse.nyc3.digitaloceanspaces.com/site/img/group-2019.jpg
+  caption-header: StuyPulse with Alfred on Stop Build Day.
