--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "bootstrap"]
 	path = bootstrap
-	url = https://github.com/Team694/bootstrap.git
+	url = https://github.com/StuyPulse/bootstrap.git
