--- a/_data/sponsors/sponsors.yml
+++ b/_data/sponsors/sponsors.yml
@@ -29,6 +29,9 @@
 - name: Numerati
   logo: https://stuypulse.nyc3.cdn.digitaloceanspaces.com/site/sponsorships/img/Numerati.png
   site: http://numeratipartners2012.com/
+- name: David Resnick & Associates
+  logo: https://stuypulse.nyc3.cdn.digitaloceanspaces.com/site/sponsorships/img/DavidResnick.png
+  site: https://www.injuryclaimnyclaw.com/
 - name: Joe Ricci
 - name: Justin Kim
 - name: Rehab One Physical Therapy PC
