Add DigitalOcean as a sponsor to the website

--- a/_data/sponsors/sponsors.yml
+++ b/_data/sponsors/sponsors.yml
@@ -4,6 +4,9 @@
 - name: D.E. Shaw &amp; Co.
   logo: https://stuypulse.nyc3.cdn.digitaloceanspaces.com/site/sponsorships/img/deshaw.gif
   site: http://www.deshaw.com/
+- name: DigitalOcean
+  logo: https://i.pcmag.com/imagery/reviews/06IGOglipf2dmkiXBsUunYT-7.fit_scale.size_1028x578.v_1569474162.jpg  
+  site: https://digitalocean.com/ 
 - name: The Wallace Foundation
   logo: https://stuypulse.nyc3.cdn.digitaloceanspaces.com/site/sponsorships/img/wallacefoundation.gif
   site: http://www.wallacefoundation.org/Pages/default.aspx
