Update yml for rosenbaum

--- a/_data/sponsors/sponsors.yml
+++ b/_data/sponsors/sponsors.yml
@@ -29,6 +29,9 @@
 - name: RiskEcon Lab for Decision Metrics
   logo: https://stuypulse.nyc3.cdn.digitaloceanspaces.com/site/sponsorships/img/RiskEcon.png
   site: https://wp.nyu.edu/riskeconlab/
+- name: Rosenbaum Law
+  logo: https://stuypulse.nyc3.cdn.digitaloceanspaces.com/site/sponsorships/img/Rosenbaum_LOGO.png
+  site: https://www.rosenbaumnylaw.com/  
 - name: Numerati
   logo: https://stuypulse.nyc3.cdn.digitaloceanspaces.com/site/sponsorships/img/Numerati.png
   site: http://numeratipartners2012.com/
