--- a/_data/sponsors/sponsors.yml
+++ b/_data/sponsors/sponsors.yml
@@ -35,6 +35,9 @@
 - name: David Resnick & Associates
   logo: https://stuypulse.nyc3.cdn.digitaloceanspaces.com/site/sponsorships/img/david.png 
   site: https://www.injuryclaimnyclaw.com/
+- name: Rosenbaum & Rosenbaum, P.C. 
+  logo: https://stuypulse.nyc3.cdn.digitaloceanspaces.com/site/sponsorships/img/rosenbaum.png
+  site: https://www.rosenbaumnylaw.com/
 - name: Joe Ricci
 - name: Justin Kim
 - name: Rehab One Physical Therapy PC
