Update gem bundler

--- a/_data/sponsors/sponsors.yml
+++ b/_data/sponsors/sponsors.yml
@@ -35,7 +35,7 @@
 - name: David Resnick & Associates
   logo: https://stuypulse.nyc3.cdn.digitaloceanspaces.com/site/sponsorships/img/david.png 
   site: https://www.injuryclaimnyclaw.com/
-- name: Rosenbaum & Rosenbaum, P.C. 
+- name: Rosenbaum & Rosenbaum 
   logo: https://stuypulse.nyc3.cdn.digitaloceanspaces.com/site/sponsorships/img/rosenbaum.png
   site: https://www.rosenbaumnylaw.com/
 - name: Joe Ricci
