Update solidworks website url

--- a/_data/sponsors/sponsors.yml
+++ b/_data/sponsors/sponsors.yml
@@ -25,7 +25,7 @@
   site: http://www.bloomberg.com/
 - name: Solidworks
   logo: https://stuypulse.nyc3.cdn.digitaloceanspaces.com/site/sponsorships/img/solidworks.png
-  site: http://www.solidworks.com/
+  site: https://www.solidworks.com/
 - name: RiskEcon Lab for Decision Metrics
   logo: https://stuypulse.nyc3.cdn.digitaloceanspaces.com/site/sponsorships/img/RiskEcon.png
   site: https://wp.nyu.edu/riskeconlab/
