--- a/_data/sponsors/sponsors.yml
+++ b/_data/sponsors/sponsors.yml
@@ -1,34 +1,75 @@
 # Sponsors
 # Used by: /sponsors, front page
 # For each sponsor, name is required and logo/site are optional.
+
+## NEW SPONSORS LIST
+- name: SHS Parents' Association
+  site: https://stuy-pa.org/
+- name: AIG
+  site: https://www.aig.com/
+  logo: https://stuypulse.nyc3.digitaloceanspaces.com/site/sponsorships/img/aig.png
 - name: D.E. Shaw &amp; Co.
   logo: https://stuypulse.nyc3.cdn.digitaloceanspaces.com/site/sponsorships/img/deshaw.gif
   site: http://www.deshaw.com/
+- name: Con Edison
+  logo: https://stuypulse.nyc3.cdn.digitaloceanspaces.com/site/sponsorships/img/conedison.gif
+  site: http://www.coned.com/
+- name: Zang Family
+- name: ABB
+  site: https://global.abb/group/en
+  logo: https://stuypulse.nyc3.digitaloceanspaces.com/site/sponsorships/img/abb.png
+- name: Mary Ann Belliveau
+- name: Instinet
+  site: https://www.instinet.com/
+  logo: https://stuypulse.nyc3.digitaloceanspaces.com/site/sponsorships/img/instinet.jpg
+- name: American Online Foundation
+  logo: # benevity logo
+  site: # Amerian Online Foundation
+- name: L3Harris Foundation
+  site: # L3 site
+  logo: # l3 logo
+- name: Bloomberg
+  logo: https://stuypulse.nyc3.cdn.digitaloceanspaces.com/site/sponsorships/img/bloomberg.gif
+  site: http://www.bloomberg.com/
+- name: RiskEcon Lab for Decision Metrics
+  logo: https://stuypulse.nyc3.cdn.digitaloceanspaces.com/site/sponsorships/img/RiskEcon.png
+  site: https://wp.nyu.edu/riskeconlab/
+- name: Verizon
+  site: #verizon site
+  logo: #verizon logo
+# west gate 
+# Mirman, Markovits, and Landau, P.C.
+
+
+## OLD SPONSORS
+# - name: D.E. Shaw &amp; Co.
+  # logo: https://stuypulse.nyc3.cdn.digitaloceanspaces.com/site/sponsorships/img/deshaw.gif
+  # site: http://www.deshaw.com/
 - name: DigitalOcean
   logo: https://i.pcmag.com/imagery/reviews/06IGOgIipf2dmkiXBsUunYT-7.fit_scale.size_1028x578.v_1569474162.jpg
   site: https://digitalocean.com/ 
 - name: The Wallace Foundation
   logo: https://stuypulse.nyc3.cdn.digitaloceanspaces.com/site/sponsorships/img/wallacefoundation.gif
   site: http://www.wallacefoundation.org/Pages/default.aspx
-- name: Con Edison
-  logo: https://stuypulse.nyc3.cdn.digitaloceanspaces.com/site/sponsorships/img/conedison.gif
-  site: http://www.coned.com/
+# - name: Con Edison
+  # logo: https://stuypulse.nyc3.cdn.digitaloceanspaces.com/site/sponsorships/img/conedison.gif
+  # site: http://www.coned.com/
 - name: SHS Alumni Association
   logo: https://stuypulse.nyc3.cdn.digitaloceanspaces.com/site/sponsorships/img/shsaa.gif
   site: http://www.shsaa.org/
-- name: SHS Parents' Association
-  site: https://stuy-pa.org/
+# - name: SHS Parents' Association
+  # site: https://stuy-pa.org/
 - name: Ann &amp; Donovan Moore
 - name: Abby &amp; Tom Ferguson
-- name: Bloomberg
-  logo: https://stuypulse.nyc3.cdn.digitaloceanspaces.com/site/sponsorships/img/bloomberg.gif
-  site: http://www.bloomberg.com/
+# - name: Bloomberg
+#   logo: https://stuypulse.nyc3.cdn.digitaloceanspaces.com/site/sponsorships/img/bloomberg.gif
+#   site: http://www.bloomberg.com/
 - name: Solidworks
   logo: https://stuypulse.nyc3.cdn.digitaloceanspaces.com/site/sponsorships/img/solidworks.png
   site: http://www.solidworks.com/
-- name: RiskEcon Lab for Decision Metrics
-  logo: https://stuypulse.nyc3.cdn.digitaloceanspaces.com/site/sponsorships/img/RiskEcon.png
-  site: https://wp.nyu.edu/riskeconlab/
+# - name: RiskEcon Lab for Decision Metrics
+#   logo: https://stuypulse.nyc3.cdn.digitaloceanspaces.com/site/sponsorships/img/RiskEcon.png
+#   site: https://wp.nyu.edu/riskeconlab/
 - name: Numerati
   logo: https://stuypulse.nyc3.cdn.digitaloceanspaces.com/site/sponsorships/img/Numerati.png
   site: http://numeratipartners2012.com/
