Update sponsors and ec

--- a/_data/ec.yml
+++ b/_data/ec.yml
@@ -45,5 +45,7 @@ design:
     name: Jeremy Z.
 machinist:
     name: Jason C.
+assistant-machinist:
+    name: Ryan L.
 webmaster:
     name: Myles P. &amp; Nicky L.
