Update template tags and remove comment

--- a/_data/ec.yml
+++ b/_data/ec.yml
@@ -43,9 +43,9 @@ ados:
     name: Katie C.
 design:
     name: Jeremy Z.
-machinist:
+dom:
     name: Jason C.
-assistant-machinist:
+adom:
     name: Ryan L.
 webmaster:
     name: Myles P. &amp; Nicky L.
